fix the disklabel sanity check coversion for case when both disklabel and disk geometry are > DEV_BSIZE, such as fictitious cd(4) disklabel

still part of PR kern/53833